--- a/app/src/main/res/layout/fragment_care_main.xml
+++ b/app/src/main/res/layout/fragment_care_main.xml
@@ -102,6 +102,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text="용현문"
+                        android:textColor="#000000"
                         android:textSize="16sp" />
 
                     <TextView
@@ -110,6 +111,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="45dp"
                         android:text="김현문"
+                        android:textColor="#000000"
                         android:textSize="16sp" />
 
                     <LinearLayout
@@ -123,7 +125,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="44dp"
                             android:text="15:00 ~ !7:00"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:textColor="#000000" />
 
                         <TextView
                             android:id="@+id/textView39"
@@ -157,6 +160,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="2개"
+                            android:textColor="#000000"
                             android:textSize="16sp" />
 
                         <Button
