--- a/app/src/main/res/layout/fragment_care_main.xml
+++ b/app/src/main/res/layout/fragment_care_main.xml
@@ -124,9 +124,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="44dp"
-                            android:text="15:00 ~ !7:00"
-                            android:textSize="16sp"
-                            android:textColor="#000000" />
+                            android:text="15:00 ~ 17:00"
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/textView39"
