--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,7 +162,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/subName"
+                                android:id="@+id/classScope"
                                 android:layout_width="290dp"
                                 android:layout_height="20dp"
                                 android:layout_marginTop="7dp"
@@ -187,7 +187,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/mobile"
+                                android:id="@+id/classCategory"
                                 android:layout_width="290dp"
                                 android:layout_height="20dp"
                                 android:layout_marginTop="7dp"
@@ -203,7 +203,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/price"
+                                android:id="@+id/TextView"
                                 android:layout_width="70dp"
                                 android:layout_height="20dp"
                                 android:layout_marginLeft="16dp"
@@ -215,7 +215,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/equip"
+                                android:id="@+id/classSelf"
                                 android:layout_width="290dp"
                                 android:layout_height="20dp"
                                 android:layout_marginTop="7dp"
