--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -96,22 +96,32 @@
 
                     <Button
                         android:id="@+id/button2"
-                        android:layout_width="170dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
 
-                        android:layout_marginRight="10dp"
+                        android:layout_weight="1"
                         android:background="@drawable/bold1"
                         android:gravity="center"
                         android:text="회원정보수정"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <Button
+                        android:id="@+id/goDogList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:text="반려견목록" />
+
+                    <Button
                         android:id="@+id/button3"
-                        android:layout_width="170dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
+                        android:layout_weight="1"
                         android:background="@drawable/bold1"
                         android:gravity="center"
                         android:text="반려동물등록"
