--- a/app/src/main/res/layout/fragment_sue.xml
+++ b/app/src/main/res/layout/fragment_sue.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -46,12 +47,14 @@
                         android:layout_gravity="center_horizontal"
                         android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/imageView4"
-                            android:layout_width="220dp"
-                            android:layout_height="match_parent"
+                        <ImageButton
+                            android:id="@+id/imageButton2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:src="@drawable/dogicon" />
+                            android:backgroundTint="#FFFFFF"
+                            android:src="@drawable/capture"
+                            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
                     </LinearLayout>
 
                     <LinearLayout
